--- a/index.html
+++ b/index.html
@@ -8,60 +8,66 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <div class="section1">
         <div class="top-bar margin">
-            <h1 class="logo white_text">Header Logo</h1>
+            <h1 class="logo white_text">Oranges</h1>
             <ul>
-                <li><a href="link1">header link one</a></li>
-                <li><a href="link2">header link two</a></li>
-                <li><a href="link2">header link three</a></li>
+                <li><a href="link1">Citrus Family</a></li>
+                <li><a href="link2">About</a></li>
+                <li><a href="link2">More Info</a></li>
             </ul>
         </div>
         <div class="hero margin">
             <div class="hero-button">
-                <h1 class="hero-text">This website is awesome</h1>
-                <p class="hero-subtext">subtext with some info</p>
+                <h1 class="hero-text">This website is dedicated to oranges</h1>
+                <p class="hero-subtext">The most superior fruit</p>
             <button class="sign-up">Sign up</button>
             </div>
-          <div class="image"><img src="image"></div>
+          <div class="image"><img src="images/orange-banner.jpeg"></div>
         </div>
     </div>
-    <div class="content margin">
-        <h1>Some random information.</h1>    
+    <div class="section2 margin">
+    <div class="content">
+        <h1>Orange Exhibit</h1>    
         <div class="boxes">
             <div class="box">
-                <div class="image_ill"></div>
+                <div class="image_ill"><img src="images/tangerine.jpeg"></div>
                 <p>subtext</p>
             </div>
             <div class="box">
-                <div class="image_ill"></div>
+                <div class="image_ill"><img src="images/navel-orange.jpeg"></div>
                 <p>subtext</p>
             </div>
             <div class="box">
-                <div class="image_ill"></div>
+                <div class="image_ill"><img src="images/blood-orange.jpeg"></div>
                 <p>subtext</p>
             </div>
             <div class="box">
-                <div class="image_ill"></div>
+                <div class="image_ill"><img src="images/cara-cara.jpeg"></div>
                 <p>subtext</p>
             </div>  
         </div>
     </div>
-    <div class="quote">
-        <div class="margin">
-            <p class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. </p>
-            <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="section3">
+        <div class="quote">
+            <div class="margin">
+                <p class="text">The orange originated in a region encompassing Southern China, Northeast India, and Myanmar, and the earliest mention of the sweet orange was in Chinese literature in 314 BC. As of 1987, orange trees were found to be the most cultivated fruit tree in the world. </p>
+                <p class="signature">-Wikipedia</p>
+            </div>
         </div>
     </div>
-    <div class="call-signup">
-        <div class="call_signup margin">
-            <h1>Call to action! It's time!</h1>
-            <p>Sign up with the button!!!</p>
+    <div class="section4 margin">
+        <div class="call-action">
+            <div class="call-signup">
+                <h1 class="white_text" >Call to action! It's time!</h1>
+                <p class="white_text">Sign up with the button!!!</p>
+            </div>
             <button class="sign-up">Sign up</button>
         </div>
     </div>
     <div class="footer">
-        <p class="text white_text">Copyright The Odin Project 2021</p>
+        <p class="white_text">Copyright The Odin Project 2021</p>
     </div>
 </body>
 </html>
